working get get song request
