# src/main/java/org/muzika/queuemanager/dto/SongIdRequest.java
@@ -1,0 +1,11 @@
+package org.muzika.queuemanager.dto;
+
+import lombok.Data;
+
+import java.util.UUID;
+
+@Data
+public class SongIdRequest {
+    private UUID songId;
+}
+
